data/derived/comb/progs/unify/prog4959.ml.out
Characters 35-48:
  let _ = stringOfList (stringOfList string_of_int) [[1;2;3];[4;5];[6];[]];;
                                     ^^^^^^^^^^^^^
Error: This expression has type int -> string
       but an expression was expected of type
         (('a -> 'b) -> 'a list -> 'b list) ->
         ('c -> string list -> string) -> 'd
       Type int is not compatible with type ('a -> 'b) -> 'a list -> 'b list 
